* FIXED: kiwix-serve UI for non-javascript browsers like Dillo (#587)
* FIXED: kiwix-serve crahs if really long URL (#400)
* FIXED: small display issue if multilingual ZIM file
* FIXED: Toolbar buttons order
* FIXED: Argument forwarding in kiwix-launcher
* FIXED: Copy to clipboard if inverted colors (#414)
* FIXED: Select all inverted colors
* NEW: New supported user interface languages: Chuvash (cv), Fiji
  Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
  Sanskrit (sa), Uzbek (uz)
* NEW: Does not ask to download remote catalogs if user is offline

Kiwix 0.9 rc2
* FIXED: kiwix-manage generate wrong size for splitted ZIM files (ID: 3547892)
* FIXED: kiwix-install crashes
* FIXED: kiwix-serve memory leak on ARM (ID: 3538663)
* FIXED: Open link in new tab from the right-click contextual menu (ID: 3553735)
* FIXED: Hide bookmarks sidebar in the "library view" (ID: 3555848)
* FIXED: Better landing page loading in kiwix-plug (by introducing ip forwarding)
* FIXED: Unclean Windows Registery after uninstalling (ID: 3467455)
* FIXED: Problems in creating PDF/HTML from tabs (#362)
* FIXED: Kiwix crashes on MS/Windows with "special" files (#317)
* FIXED: 0.9rc1 broken Drag&Drop of files (regression)
* FIXED: Multiple bugs impacting kiwix-plug scripts
* FIXED: Server URL computation - was buggy in a few special cases (#363)
* FIXED: *.zimaa files management (improved)
* FIXED: Indexing progression computation (more accurate)
* FIXED: "verbose" mode in kiwix-install, kiwix-index and kiwix-serve
* FIXED: Ugly 16x16 kiwix icon
* FIXED: Broken suggestion/search textbox with “syllable input mode”
* FIXED: Buggy kiwix-manage remove feature
* FIXED: Internet Explorer compatibility with kiwix-serve.
* FIXED: Sporadicaly dying (serving big contents) kiwix-serve (#371)
* FIXED: 64bits kiwix crashes on Archlinux (#365)
* FIXED: Buggy filtering by size in the library
* FIXED: Weak windows handling with small screen resolution
* FIXED: kiwix- console tools do not start on OSX